--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prism-react-renderer": "^0.1.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-transition-group": "^4.1.1",
+    "react-transition-group": "^4.4.2",
     "styletron-engine-atomic": "^1.4.0",
     "styletron-react": "^5.2.0",
     "webpack": "^4.32.2",
@@ -35,5 +35,8 @@
     "react-transition-group": ">= 4",
     "styletron-engine-atomic": "^1.4.0",
     "styletron-react": "^5.2.0"
+  },
+  "dependencies": {
+    "atomize": "^1.0.28"
   }
 }
